<resources>
    <string name="app_name">Quiz</string>
    <string name="enter_name_text">Please Enter Your Name :</string>
    <string name="nameHint">NAME</string>
    <string name="start">Start</string>
    <string name="sports_quiz">SPORTS QUIZ</string>
    <string name="app_logo_icon">APP LOGO ICON</string>
    <string name="score_value_text">SCORE : 0</string>
    <string name="question_no_string">Question No. : 0/0</string>
    <string name="question_string">Q.1. What is Question ?</string>
    <string name="option_one">Option One</string>
    <string name="type_your_answer_here">Type Your Answer Here</string>
    <string name="submit">SUBMIT</string>
</resources>
