<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    android:background="@drawable/start_screen_gradient"
    tools:context="com.example.nitishkumar.quiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sportQuiz"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/_20dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/sports_quiz"
            android:padding="@dimen/_20dp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="@dimen/_100sp"
            app:autoSizeMinTextSize="@dimen/_12sp"
            app:autoSizeStepGranularity="@dimen/_1sp"
            app:autoSizeTextType="uniform"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_72dp"
            android:layout_below="@id/sportQuiz"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_logo_icon"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/nameAskText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100dp"
            android:layout_below="@id/logo"
            android:padding="@dimen/_10dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/enter_name_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="@dimen/_100sp"
            app:autoSizeMinTextSize="@dimen/_12sp"
            app:autoSizeStepGranularity="@dimen/_1sp"
            app:autoSizeTextType="uniform"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:textStyle="bold"
            android:inputType="textPersonName|textCapCharacters"
            android:hint="@string/nameHint"
            android:textAlignment="center"
            android:layout_below="@id/nameAskText"/>

        <Button
            android:id="@+id/startButtonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/start"
            android:background="@drawable/ic_forward_black_24dp"
            android:layout_margin="@dimen/_5dp"
            android:padding="@dimen/_10dp"/>

    </RelativeLayout>

</ScrollView>
